@@ -1,3 +1,10 @@
+2008-03-20 Martin Schaaf <mascha@ma-scha.de>
+
+	* src/MMapArea.py
+	o check for attribute transform on coord transformation
+	* src/MainWindow.py
+	o fix color update if a thought is selected that doesn't have background or foreground colors
+
 2008-03-18 Martin Schaaf <mascha@ma-scha.de>
 
 	* src/MMapArea.py
